fix alignment of left col

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ p {
 
 #aspectMenu {
     width: 30%;
+    text-align: right;
 }
 
 #littleDudeSpace {
